--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 
-.Rproj.user/52B9D855/sources/prop/0E0BF97D
-.Rproj.user/52B9D855/sources/session-fdb7dbf0/05DD067D
+.DS_Store
+.Rproj.user/
+/.Rproj.user/
+
+/.quarto/
+
